--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,19 @@
   overflow: hidden;
 }
 
+.button::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-fc);
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
 .header {
   margin: 100px 0;
   align-items: center;
