add font-variation-settings for .page

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@
   background-color: var(--main-bgc);
   background-size: cover;
   background-attachment: fixed;
+  font-variation-settings: "wght" var(--main-fw-text);
 }
 
 .button {
