--- a/styles/style.css
+++ b/styles/style.css
@@ -165,7 +165,7 @@
   mix-blend-mode: hard-light;
   font-size: 14px;
   opacity: 0.3;
-  text-shadow: none;
+  text-shadow: 0 4px 4px #000;
 }
 
 @supports (text-stroke: 1px var(--label-text-stroke)) or (-webkit-text-stroke: 1px var(--label-text-stroke)) {
