--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@
   height: 100%;
   background-color: var(--main-fc);
   transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease;
 }
 
 .header {
@@ -205,17 +205,17 @@
 
 .like-icon.is-liked .heart-outline {
   fill: var(--heart-focus-color);
-  transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease;
 }
 
 .heart-fill {
   fill: var(--heart-fill);
-  transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease;
 }
 
 .like-icon.is-liked .heart-fill {
   fill: var(--heart-focus-color);
-  transition: fill 0.5s ease-in-out;
+  transition: fill 0.5s ease;
 }
 
 .heart-stars {
@@ -224,12 +224,12 @@
 
 .heart-cross {
   fill: var(--heart-cross);
-  transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease;
 }
 
 .like-icon.is-liked .heart-cross {
   fill: var(--heart-focus-color);
-  transition: fill 0.3s ease-in-out;
+  transition: fill 0.3s ease;
 }
 
 .post__list-item-btn-like {
