--- a/styles/effects.css
+++ b/styles/effects.css
@@ -10,6 +10,10 @@ button:focus {
     opacity: .6;
 }
 
+.theme-menu__button:focus-visible {
+    opacity: .6;
+}
+
 .theme-menu__button:focus-visible::after {
     width: 100%;
 }
