--- a/styles/style.css
+++ b/styles/style.css
@@ -294,7 +294,7 @@
 .floppy {
   position: relative;
   z-index: 11;
-  max-width: 21px;
+  width: 21px;
   height: 21px;
   fill: var(--mix-blend-mode-fill-color);
   mix-blend-mode: difference;
@@ -375,20 +375,18 @@ path {
   }
 
   .save-btn {
+    justify-content: center;
     inline-size: 306px;
     block-size: 84px;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    font-size: 14px;
+    padding: 0;
   }
 
   .floppy {
     width: 28px;
     height: 28px;
-  }
-
-  .save-btn-text {
-    right: auto;
-    bottom: 13px;
   }
 
   .dialog {
