add var --mix-blend-fill-color

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,6 +11,7 @@
     --label-text-stroke: #fff;
     --font-variation-settings: 'wght' var(--main-fw-text);
     --mix-blend-mode-text-color: var(--main-bgc);
+    --mix-blend-fill-color: #fff;
 
 
     --heart-outline: #000;
