--- a/styles/style.css
+++ b/styles/style.css
@@ -304,7 +304,7 @@
   z-index: 11;
   width: 21px;
   height: 21px;
-  fill: var(--mix-blend-mode-text-color);
+  fill: var(--mix-blend-fill-color);
   mix-blend-mode: difference;
 }
 
