--- a/styles/themes.css
+++ b/styles/themes.css
@@ -17,6 +17,7 @@
         --main-bgc: #fff;
         --border-color: #000;
         --mix-blend-mode-text-color: var(--main-bgc);
+        --mix-blend-fill-color: #fff;
         --label-text-stroke: #fff;
         --themes-bg: repeating-linear-gradient(90deg,
                 #d3d3d3,
@@ -43,6 +44,7 @@
         --main-fc: #00CC14;
         --main-bgc: #000000;
         --mix-blend-mode-text-color: var(--main-fc);
+        --mix-blend-fill-color: #00CC14;
         --border-color: #00CC14;
         --label-text-stroke: #00CC14;
         --heart-outline: #00CC14;
