--- a/styles/themes.css
+++ b/styles/themes.css
@@ -8,7 +8,7 @@
 
 @media (prefers-color-scheme: light) {
 
-    :root.theme-light,
+    :root,
     :root.theme-auto {
         --main-fw-text: 400;
         --main-fw-title: 700;
@@ -37,7 +37,7 @@
 
 @media (prefers-color-scheme: dark) {
 
-    :root.theme-dark,
+    :root,
     :root.theme-auto {
         --main-fw-text: 465;
         --main-fw-title: 785;
