--- a/styles/style.css
+++ b/styles/style.css
@@ -213,33 +213,30 @@
   block-size: 38px;
 }
 
-.like-icon.is-liked .heart-outline {
-  fill: var(--heart-focus-color);
-  transition: fill 0.3s ease;
-}
-
-.heart-fill {
-  fill: var(--heart-fill);
-  transition: fill 0.3s ease;
-}
-
-.like-icon.is-liked .heart-fill {
-  fill: var(--heart-focus-color);
-  transition: fill 0.5s ease;
-}
-
-.heart-stars {
+.sparks {
+  fill: var(--sparks-fill);
   opacity: 0;
 }
 
-.heart-cross {
-  fill: var(--heart-cross);
-  transition: fill 0.3s ease;
+.contour {
+  fill: var(--contour-fill);
+  transition: fill 0.6s ease 0.06s;
 }
 
-.like-icon.is-liked .heart-cross {
-  fill: var(--heart-focus-color);
-  transition: fill 0.3s ease;
+.core {
+  fill: var(--body-core-fill);
+  transition: fill 0.3s ease 0.03s;
+}
+
+.main-body {
+  fill: var(--body-core-fill);
+  transition: fill 0.5s ease 0.05s;
+}
+
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body,
+.like-icon.is-liked .contour {
+  fill: var(--body-core-active);
 }
 
 .post__list-item-btn-like {
