--- a/styles/themes.css
+++ b/styles/themes.css
@@ -19,6 +19,11 @@
         --mix-blend-mode-text-color: var(--main-bgc);
         --mix-blend-fill-color: #fff;
         --label-text-stroke: #fff;
+        --contour-fill: #000;
+        --body-core-fill: #fff;
+        --sparks-fill: red;
+        --body-core-hover: #000;
+        --body-core-active: red;
         --themes-bg: repeating-linear-gradient(90deg,
                 #d3d3d3,
                 #d3d3d3 2px,
@@ -47,10 +52,11 @@
         --mix-blend-fill-color: #00CC14;
         --border-color: #00CC14;
         --label-text-stroke: #00CC14;
-        --heart-outline: #00CC14;
-        --heart-fill: #000;
-        --heart-cross: #000;
-        --heart-hover-color: #00CC14;
+        --contour-fill: #00CC14;
+        --body-core-fill: #000;
+        --sparks-fill: red;
+        --body-core-hover: #00CC14;
+        --body-core-active: red;
         --themes-bg: repeating-linear-gradient(90deg,
                 #000,
                 #000 2px,
