add transform-origin for .heart

--- a/styles/effects.css
+++ b/styles/effects.css
@@ -37,7 +37,8 @@ button:focus {
     fill: var(--body-core-active);
 }
 
-.like-icon.is-liked {
+.like-icon.is-liked .heart {
+    transform-origin: center;
     animation: scale 0.3s ease-in 0.1s 1 alternate;
 }
 
