--- a/styles/variables.css
+++ b/styles/variables.css
@@ -70,7 +70,7 @@
     --mix-blend-mode-text-color: var(--main-fc);
     --mix-blend-fill-color: #00CC14;
     --border-color: #00CC14;
-    --label-text-stroke: #00CC14;
+    --label-text-stroke: #000;
     --contour-fill: #00CC14;
     --body-core-fill: #000;
     --sparks-fill: red;
