fix variable name

--- a/styles/style.css
+++ b/styles/style.css
@@ -73,13 +73,13 @@
 
 .header__logo-link {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
-  font-weight: var(----main-fw-text);
+  font-weight: var(--main-fw-text);
 }
 
 .header__logo-title {
   padding: 20px 0 25px;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
-  font-weight: var(----main-fw-text);
+  font-weight: var(--main-fw-text);
   text-align: center;
 }
 
