moved variables from variables.css to themes.css

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -7,9 +7,7 @@
 
 
 @media (prefers-color-scheme: light) {
-
-    :root,
-    :root.theme-auto {
+    :root.theme-light {
         --main-fw-text: 400;
         --main-fw-title: 700;
         --main-fc: #000;
@@ -41,9 +39,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-
-    :root,
-    :root.theme-auto {
+    :root.theme-dark {
         --main-fw-text: 465;
         --main-fw-title: 785;
         --main-fc: #00CC14;
