--- a/styles/themes.css
+++ b/styles/themes.css
@@ -7,6 +7,8 @@
 
 
 @media (prefers-color-scheme: light) {
+
+    :root,
     :root.theme-light {
         --main-fw-text: 400;
         --main-fw-title: 700;
@@ -39,6 +41,8 @@
 }
 
 @media (prefers-color-scheme: dark) {
+
+    :root,
     :root.theme-dark {
         --main-fw-text: 465;
         --main-fw-title: 785;
